recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(n:Int, t:Int, l:Int, i:Int)    {

	if( n=0){ return() }
		else{
			avance(l);
			gauche(t);
			spiral(n-1,t,l+i, i);
		}
	
}
